--- a/backend/composer.json
+++ b/backend/composer.json
@@ -22,7 +22,8 @@
         "phpstan/phpstan": "^2.1",
         "phpunit/phpunit": "^11.5.3",
         "sebastian/phpcpd": "^2.0",
-        "squizlabs/php_codesniffer": "^4.0"
+        "squizlabs/php_codesniffer": "^4.0",
+        "vimeo/psalm": "^6.5"
     },
     "autoload": {
         "psr-4": {
