--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^19.1.1",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.5",
-    "tailwind": "^4.0.0"
+    "tailwind": "^4.0.0",
+    "vite": "^5.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -40,5 +41,10 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
+  },
+  "scripts": {
+    "build": "tsc --noEmit && vite build",
+    "build:skip-ts": "vite build"
+    
   }
 }
