--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc --noEmit && vite build",
+    "build:skip-ts": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -41,10 +42,5 @@
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
     "vite": "^7.1.7"
-  },
-  "scripts": {
-    "build": "tsc --noEmit && vite build",
-    "build:skip-ts": "vite build"
-    
   }
 }
