--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
+    "amqplib": "^0.10.9",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "firebase": "^12.5.0",
@@ -22,9 +23,7 @@
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.9.5",
-    "tailwind": "^4.0.0",
-    "vite": "^5.0.0"
+    "react-router-dom": "^7.9.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
