--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       POSTGRES_USER=postgres
       POSTGRES_PASSWORD=postgres
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - pgdata2:/var/lib/postgresql/data
 
 volumes:
   pgdata:
