--- a/backend/DockerFIle
+++ b/backend/DockerFIle
@@ -23,8 +23,15 @@ COPY . .
 # --- 5. Generar storage y logs ---
 RUN chmod -R 777 storage bootstrap/cache
 
-# --- 6. Puerto (para Render) ---
+# --- 6. LIMPIAR CACHÉ DE LARAVEL ---
+RUN php artisan config:clear \
+    && php artisan cache:clear \
+    && php artisan route:clear \
+    && php artisan view:clear \
+    && php artisan config:cache
+
+# --- 7. Puerto (para Render) ---
 EXPOSE 8080
 
-# --- 7. Comando de inicio ---
+# --- 8. Comando de inicio ---
 CMD sh -c "php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=8080"
