--- a/backend/DockerFIle
+++ b/backend/DockerFIle
@@ -1,7 +1,5 @@
-# --- 1. Imagen base de PHP ---
 FROM php:8.2-fpm
 
-# --- 2. Instalar extensiones necesarias ---
 RUN apt-get update && apt-get install -y \
     libpq-dev \
     libzip-dev \
@@ -9,23 +7,17 @@ RUN apt-get update && apt-get install -y \
     unzip \
     && docker-php-ext-install pdo pdo_pgsql zip
 
-# --- 3. Instalar Composer ---
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
 
-# --- 4. Copiar archivo composer y proyecto ---
 WORKDIR /app
 COPY composer.json composer.lock ./
+
 RUN composer install --no-dev --no-interaction --prefer-dist
 
 COPY . .
 
-# --- 5. Permisos ---
 RUN chmod -R 777 storage bootstrap/cache
-
-# *** NO correr php artisan config:cache AQUÍ (en build) ***
-# *** NO cachear configuración aquí ***
 
 EXPOSE 8080
 
-# --- 6. Al arrancar el contenedor, sí limpiamos la config ---
-CMD sh -c "php artisan config:clear && php artisan migrate --force && php artisan serve --host=0.0.0.0 --port=8080"
+CMD sh -c "php artisan config:clear && php artisan cache:clear && php artisan route:clear && php artisan serve --host=0.0.0.0 --port=8080"
