--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-free": "^7.1.0",
     "amqplib": "^0.10.9",
     "axios": "^1.13.2",
+    "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
     "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
@@ -23,7 +24,9 @@
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "shadcn-ui": "^0.9.5",
+    "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
