--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,11 +18,13 @@
     "date-fns": "^4.1.0",
     "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
+    "i18next": "^25.7.2",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
+    "react-i18next": "^16.5.0",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.5",
     "shadcn-ui": "^0.9.5",
