--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,9 @@
     "react-datepicker": "^8.8.0",
     "react-dom": "^19.1.1",
     "react-i18next": "^16.5.0",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.9.5",
+    "react-router-dom": "^7.12.0",
     "shadcn-ui": "^0.9.5",
     "tailwind-merge": "^3.4.0"
   },
